--- a/Platform_Service/appsettings.Development.json
+++ b/Platform_Service/appsettings.Development.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "CommandService": "http://localhost:5000/api/c/platforms"
+  "CommandService": "https://localhost:44383/api/c/platforms"
 }
