feat : adddd db context to cmmand

--- a/Platform_Service/appsettings.Development.json
+++ b/Platform_Service/appsettings.Development.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "CommandService": "https://localhost:44383/api/c/platforms"
+  "CommandService": "https://localhost:44383/api/c/platforms",
+  "ConnectionStrings": {
+    "PlatformsConn": "Server=localhost,1433;Initial Catalog=platformsdb;User ID=sa;Password=C21484@123;"
+  }
 }
