feat : add grpc

--- a/Platform_Service/appsettings.Production.json
+++ b/Platform_Service/appsettings.Production.json
@@ -8,7 +8,7 @@
   "Kestrel": {
     "Endpoints": {
       "Grpc": {
-        "protocols": "Http2",
+        "Protocols": "Http2",
         "Url": "http://platforms-clusterip-srv:666"
       },
       "webApi": {
